--- a/public/frontend/css/about.css
+++ b/public/frontend/css/about.css
@@ -36,7 +36,7 @@
 .thirty::before {
     content: "+";
     position: absolute;
-    left: 4vw;
+    left: 55%;
     bottom: 35%;
     font-size: 1.5vw;
     font-weight: bold;
