--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -7,13 +7,16 @@ body {
     font-family: "Marcellus", sans-serif !important;
     overflow-x: hidden !important;
 }
+
 a {
     text-decoration: none !important;
 }
+
 footer a {
     text-decoration: none !important;
     color: white !important;
 }
+
 h1,
 h2,
 h3,
@@ -34,6 +37,7 @@ small {
     font-family: "Marcellus", serif !important;
     /*font-family: 'Montserrat', sans-serif !important;*/
 }
+
 .small {
     font-size: 10px !important;
 }
@@ -47,31 +51,39 @@ header {
     z-index: 999;
     color: white;
 }
+
 .companyLogo {
     text-decoration: none !important;
     color: white;
 }
+
 .custom-nav-link {
     color: white;
     position: relative;
     font-weight: 400;
 }
+
 .nav-link {
     color: white !important;
 }
+
 header.scrolled {
     color: #000;
     background-color: white !important;
     transition: background-color 0.3s ease;
 }
-header.scrolled .nav-link, header.scrolled .companyLogo {
+
+header.scrolled .nav-link,
+header.scrolled .companyLogo {
     color: #777 !important;
 }
+
 header.scrolled .custom-nav-link {
     color: white;
     position: relative;
     font-weight: 400;
 }
+
 header.scrolled .custom-nav-link.active {
     color: #c8102e !important;
 }
@@ -90,6 +102,7 @@ header.scrolled .custom-nav-link.active {
     margin-top: 4px;
     border-radius: 1px;
 }
+
 .nav-link:focus,
 .nav-link:hover {
     color: #c8102e !important;
@@ -113,6 +126,7 @@ header.scrolled .custom-nav-link.active {
     left: 0;
     z-index: -1;
 }
+
 .brdr-bottom-hero {
     position: relative;
     z-index: 11;
@@ -128,6 +142,7 @@ header.scrolled .custom-nav-link.active {
     left: 0;
     z-index: -1;
 }
+
 /* title border end*/
 
 /* Hero banner  */
@@ -135,6 +150,7 @@ header.scrolled .custom-nav-link.active {
     height: 100dvh;
     max-height: 60vw;
 }
+
 .hero-swiper .swiper-slide img {
     width: 100%;
     height: 100%;
@@ -179,12 +195,14 @@ header.scrolled .custom-nav-link.active {
 .HeroContent h1 {
     font-size: 50px;
 }
+
 /* Hero banner end */
 
 /* subcaptions css */
 .QASubcaption {
     opacity: 0.5;
 }
+
 .QASubcaption {
     display: inline-block;
     transition: transform 0.5s ease, color 0.5s ease;
@@ -262,6 +280,7 @@ header.scrolled .custom-nav-link.active {
     transition: transform 0.2s ease;
     will-change: transform;
 }
+
 /* scroll down button css end  */
 /* CTA */
 .cta-banner {
@@ -289,7 +308,8 @@ header.scrolled .custom-nav-link.active {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* semi-transparent black */
+    background: rgba(0, 0, 0, 0.5);
+    /* semi-transparent black */
     /* z-index: -1; keep it behind text */
 }
 
@@ -369,3 +389,24 @@ header.scrolled .custom-nav-link.active {
 }
 
 /* Rotating circle css */
+
+
+/* start of section animation for scrolling */
+/* Identify scroll sections */
+.scroll-snap-section {
+    scroll-margin-top: 90px;
+    opacity:1;
+    transform: translateY(20px);
+    transition: all 0.6s ease;
+}
+
+.scroll-snap-section.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
+
+
+
+/* end of section animation for scrolling */
