--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -390,12 +390,11 @@ header.scrolled .custom-nav-link.active {
 
 /* Rotating circle css */
 
-
 /* start of section animation for scrolling */
 /* Identify scroll sections */
 .scroll-snap-section {
     scroll-margin-top: 90px;
-    opacity:1;
+    opacity: 1;
     transform: translateY(20px);
     transition: all 0.6s ease;
 }
@@ -405,8 +404,28 @@ header.scrolled .custom-nav-link.active {
     transform: translateY(0);
 }
 
-
-
-
-
 /* end of section animation for scrolling */
+/* Counter section css */
+.stats {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    gap: 80px;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.stat-item {
+    font-size: 50px;
+    font-weight: bold;
+}
+
+.stat-label {
+    color: #cc0000;
+    font-size: 20px;
+    margin-top: 8px;
+}
+
+/* Counter section css end */
+    
